// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "days": [
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "6900",
  ],
  "totalBlobs": [
    5,
  ],
  "totalUniqueBlobs": [
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "days": [
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "4000",
    "6900",
  ],
  "totalBlobs": [
    4,
    5,
  ],
  "totalUniqueBlobs": [
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "days": [
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "5900",
    "4000",
    "6900",
  ],
  "totalBlobs": [
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    1,
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "6200",
    "5900",
    "4000",
    "6900",
  ],
  "totalBlobs": [
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    0,
    1,
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 90d 1`] = `
{
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "6200",
    "5900",
    "4000",
    "6900",
  ],
  "totalBlobs": [
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    0,
    1,
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "days": [
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "393216",
    "6200",
    "5900",
    "4000",
    "6900",
  ],
  "totalBlobs": [
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    0,
    1,
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 365d 1`] = `
{
  "days": [
    2022-10-16T00:00:00.000Z,
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobSizes": [
    "6400",
    "393216",
    "6200",
    "5900",
    "4000",
    "6900",
  ],
  "totalBlobs": [
    6,
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    3,
    0,
    1,
    0,
    2,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for All 1`] = `
{
  "days": [],
  "totalBlobSizes": [],
  "totalBlobs": [],
  "totalUniqueBlobs": [],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
  ],
  "avgBlobFees": [
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
  ],
  "days": [
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    3000n,
  ],
  "totalBlobFees": [
    14417920n,
  ],
  "totalBlobGasUsed": [
    655360n,
  ],
  "totalBlocks": [
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgBlobAsCalldataFees": [
    20000,
    22000,
  ],
  "avgBlobFees": [
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    20,
    22,
  ],
  "days": [
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    20,
    22,
  ],
  "days": [
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    110000n,
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    5000n,
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    14417920n,
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    655360n,
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    20,
    22,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    44000n,
    110000n,
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    2000n,
    5000n,
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    17301504n,
    14417920n,
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    786432n,
    655360n,
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 90d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    20,
    22,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    44000n,
    110000n,
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    2000n,
    5000n,
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    17301504n,
    14417920n,
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    786432n,
    655360n,
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    8650752,
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    22000n,
    44000n,
    110000n,
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    1000n,
    2000n,
    5000n,
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    8650752n,
    17301504n,
    14417920n,
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    393216n,
    786432n,
    655360n,
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 365d 1`] = `
{
  "avgBlobAsCalldataFees": [
    24200,
    22000,
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    5767168,
    8650752,
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    2022-10-16T00:00:00.000Z,
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalBlobAsCalldataFees": [
    72600n,
    22000n,
    44000n,
    110000n,
    40000n,
    66000n,
  ],
  "totalBlobAsCalldataGasUsed": [
    3300n,
    1000n,
    2000n,
    5000n,
    2000n,
    3000n,
  ],
  "totalBlobFees": [
    17301504n,
    8650752n,
    17301504n,
    14417920n,
    10485760n,
    14417920n,
  ],
  "totalBlobGasUsed": [
    786432n,
    393216n,
    786432n,
    655360n,
    524288n,
    655360n,
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for All 1`] = `
{
  "avgBlobAsCalldataFees": [],
  "avgBlobFees": [],
  "avgBlobGasPrices": [],
  "days": [],
  "totalBlobAsCalldataFees": [],
  "totalBlobAsCalldataGasUsed": [],
  "totalBlobFees": [],
  "totalBlobGasUsed": [],
  "totalBlocks": [],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
  ],
  "days": [
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    3,
  ],
  "totalUniqueReceivers": [
    2,
  ],
  "totalUniqueSenders": [
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
  ],
  "days": [
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    2,
  ],
  "totalUniqueSenders": [
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
  ],
  "days": [
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 90d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 365d 1`] = `
{
  "avgMaxBlobGasFees": [
    110,
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    2022-10-16T00:00:00.000Z,
    2023-05-10T00:00:00.000Z,
    2023-08-03T00:00:00.000Z,
    2023-08-20T00:00:00.000Z,
    2023-08-28T00:00:00.000Z,
    2023-08-31T00:00:00.000Z,
  ],
  "totalTransactions": [
    3,
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    3,
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for All 1`] = `
{
  "avgMaxBlobGasFees": [],
  "days": [],
  "totalTransactions": [],
  "totalUniqueReceivers": [],
  "totalUniqueSenders": [],
}
`;
